Task2: install chrony with different inventory settings.

--- a/inventory/DC_ZZZ.ini
+++ b/inventory/DC_ZZZ.ini
@@ -3,3 +3,4 @@ oxidized-33 ansible_host=192.168.5.33
 [DC_ZZZ_demoservers:vars]
 ansible_user=administrator
 ansible_private_key_file=/home/administrator/.ssh/id_rsa
+ntp_server=2.lv.pool.ntp.org
