--- a/templates/chrony.conf
+++ b/templates/chrony.conf
@@ -5,7 +5,7 @@
 confdir /etc/chrony/conf.d
 
 # Use Debian vendor zone.
-pool 2.debian.pool.ntp.org iburst
+pool {{ ntp_server }} iburst
 
 # Use time sources from DHCP.
 sourcedir /run/chrony-dhcp
