--- a/inventory/DC_AAA.ini
+++ b/inventory/DC_AAA.ini
@@ -3,4 +3,5 @@ rsyslog-69 ansible_host=192.168.5.69
 plex-65 ansible_host=192.168.5.65
 [DC_AAA_demoservers:vars]
 ansible_user=administrator
-ansible_private_key_file=/home/administrator/.ssh/id_rsa 
+ansible_private_key_file=/home/administrator/.ssh/id_rsa
+ntp_server=1.lv.pool.ntp.org
