Task 3: install zabbix agent2 and configure - group_vars

--- a/inventory/DC_AAA.ini
+++ b/inventory/DC_AAA.ini
@@ -5,3 +5,6 @@ plex-65 ansible_host=192.168.5.65
 ansible_user=administrator
 ansible_private_key_file=/home/administrator/.ssh/id_rsa
 ntp_server=1.lv.pool.ntp.org
+zabbix_server=192.168.5.66
+zabbix_server_active=192.168.5.66
+
