Change hostnames to match the exercise, IP adresses set to random subnets according to different data center host groups.

--- a/inventory/DC_AAA.ini
+++ b/inventory/DC_AAA.ini
@@ -1,10 +1,9 @@
 [DC_AAA_demoservers]
-rsyslog-69 ansible_host=192.168.5.69
-plex-65 ansible_host=192.168.5.65
+hostname1 ansible_host=192.168.5.61
+hostname4 ansible_host=192.168.5.62
 [DC_AAA_demoservers:vars]
 ansible_user=administrator
 ansible_private_key_file=/home/administrator/.ssh/id_rsa
 ntp_server=1.lv.pool.ntp.org
 zabbix_server=192.168.5.66
 zabbix_server_active=192.168.5.66
-
