--- a/inventory/DC_ZZZ.ini
+++ b/inventory/DC_ZZZ.ini
@@ -1,6 +1,10 @@
 [DC_ZZZ_demoservers]
-oxidized-33 ansible_host=192.168.5.33
+hostname2 ansible_host=192.168.6.31
+hostname3 ansible_host=192.168.6.32
+hostname5 ansible_host=192.168.6.33
 [DC_ZZZ_demoservers:vars]
 ansible_user=administrator
 ansible_private_key_file=/home/administrator/.ssh/id_rsa
 ntp_server=2.lv.pool.ntp.org
+zabbix_server=192.168.6.66
+zabbix_server_active=192.168.6.66
